package app.entidades.enums;

/**
 * Enum EEstadoPago
 * Define el estado de un pago
 * Basado en el UML de especificación
 */
public enum EEstadoPago {
    EXITO,
    ERROR,
    REEMBOLSADO
}
