package app.entidades.enums;

/**
 * Enum EMetodoPago
 * Define los métodos de pago disponibles
 * Basado en el UML de especificación
 */
public enum EMetodoPago {
    EFECTIVO,
    DEBITO,
    CREDITO,
    TRANSFERENCIA
}
