package app.entidades.enums;

/**
 * Enum ENivel
 * Define el nivel de dificultad de una clase
 * Basado en el UML de especificación
 */
public enum ENivel {
    PRINCIPIANTE,
    INTERMEDIO,
    AVANZADO
}
