package app.entidades.enums;

/**
 * Enum EPresencialidad
 * Define si una clase es presencial u online
 * Basado en el UML de especificación
 */
public enum EPresencialidad {
    ONLINE,
    PRESENCIAL
}
